# llm-training-playground

./: .gitignore  CLAUDE.md  README.md
ai/: .env.example  playground.db-shm  playground.db-wal  pyproject.toml
ai/app/: config.py  datasets.py  db.py  deps.py  main.py  models.py  presets.py  runner.py  schemas.py  security.py  seed.py
ai/app/routers/: auth.py  catalog.py  health.py  runs.py
ai/training/: char_model.py  char_train.py  generate.py
ui/: package.json
